argo-cd-appconfig/dev/argo-sync-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    networking.gke.io/managed-certificates: managed-cert-argo
    kubernetes.io/ingress.global-static-ip-name: poornachand-sounderrajan-argo
    networking.gke.io/v1beta1.FrontendConfig: https-redirect-argo
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              name: http
